--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,4 +81,9 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.google.android.gms:play-services-ads:22.5.0'
+    implementation 'com.android.support:multidex:2.0.1'
+//    implementation 'com.google.android.material:material:<version>'
+
+}
