--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+#  admob_flutter: ^3.0.0
+  google_mobile_ads: ^3.1.0
 
 dev_dependencies:
   flutter_test:
