--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,12 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-  flutter_launcher_icons: "^0.13.1"
+#  flutter_launcher_icons: "^0.13.1"
 
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/icons/icon.png"
+#flutter_launcher_icons:
+#  android: "launcher_icon"
+#  ios: true
+#  image_path: "assets/icons/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
