--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.2+3
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -38,8 +38,9 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-#  admob_flutter: ^3.0.0
   google_mobile_ads: ^3.1.0
+  url_launcher: ^6.1.8
+#  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
