--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+3
+version: 1.0.4+5
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
   google_mobile_ads: ^3.1.0
   url_launcher: ^6.1.8
+  shared_preferences: ^2.2.2
 #  video_player: ^2.8.1
 
 dev_dependencies:
