--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,16 +38,18 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  google_mobile_ads: ^3.1.0
+  google_mobile_ads:
+#  google_mobile_ads: ^3.1.0
   url_launcher: ^6.1.8
   shared_preferences: ^2.2.2
+  video_player:
 #  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-
+  flutter_lints:
+#  flutter_lints: ^2.0.0
 #  flutter_launcher_icons: "^0.13.1"
 
 #flutter_launcher_icons:
@@ -72,6 +74,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/icons/
+    - assets/video/screw_video.mp4
   fonts:
     - family: CodecPro-Regular
       fonts:
