--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,13 @@ flutter {
 dependencies {
     implementation 'com.google.android.gms:play-services-ads:22.6.0'
     implementation 'com.android.support:multidex:2.0.1'
+    implementation "com.google.android.material:material:1.7.0"
+    implementation "androidx.browser:browser:1.4.0"
+
+//    implementation "androidx.appcompat:appcompat:1.5.1"
+//    implementation 'com.google.android.gms:play-services-wallet:19.1.0'
+
+
 //    implementation 'com.google.android.material:material:<version>'
 
 }
